--- a/lecture_3/get_property_data.ipynb
+++ b/lecture_3/get_property_data.ipynb
@@ -2377,6 +2377,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('mec_property.csv', sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
