--- a/lecture_3/get_property_data.ipynb
+++ b/lecture_3/get_property_data.ipynb
@@ -1257,7 +1257,7 @@
     }
    ],
    "source": [
-    "# 少数(float)にするために','を''(空文字)に変換する\n",
+    "# 小数(float)にするために','を''(空文字)に変換する\n",
     "gfa = results['延床面積'].split('㎡')[0].replace(',', '')\n",
     "nla = results['有効面積'].split('㎡')[0].replace(',', '')\n",
     "\n",
@@ -1280,7 +1280,7 @@
     }
    ],
    "source": [
-    "# 少数に変更する\n",
+    "# 小数に変更する\n",
     "gfa = float(results['延床面積'].split('㎡')[0].replace(',', ''))\n",
     "nla = float(results['有効面積'].split('㎡')[0].replace(',', ''))\n",
     "\n",
